<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/step_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/step_thumbnail_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorBackgroundHighlighted"
            android:padding="80dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_cloud_off_black_48dp" />

        <ScrollView
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/step_instructions_title_tv"
                    style="@style/SubHeadingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/instructions" />

                <TextView
                    android:id="@+id/step_instructions_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_forward" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/prev_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_back" />

</android.support.constraint.ConstraintLayout>