...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ingredients" />

            <TextView
                android:id="@+id/ingredients_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.5"
                android:text="TextView" />

        </LinearLayout>
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/steps" />

        <GridView
            android:id="@+id/steps_gv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:defaultFocusHighlightEnabled="false"
            android:listSelector="@android:color/transparent"
            android:numColumns="1"
...
