<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.github.n1try.bakingtime.ui.MainActivity">

    <LinearLayout
        android:id="@+id/offline_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_cloud_off_black_48dp" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxWidth="350dp"
            android:text="@string/offline_message" />
    </LinearLayout>

    <GridView
        android:id="@+id/recipe_overview_gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="8dp"
        android:numColumns="@integer/num_cols_phone"
        android:verticalSpacing="8dp" />

</LinearLayout>
